# utf-8-testing

./: .gitignore  CMakeLists.txt  ConstChar.cpp  FilePathTest.cpp  FileReadTest.cpp  FileWriteTest.cpp  LICENSE  Log.h  README.md  StringTest.cpp  main.cpp
